--- a/pop-up/pop-up.html
+++ b/pop-up/pop-up.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
@@ -19,8 +18,8 @@
                Sorry, this site is listed as a phising site that can retrieve your confidential information. Do you still want to access the site?
             </p>
             <div class="btns">
-               <a href="https://www.codingnepalweb.com/">See it anyway</a>
-               <a href="https://www.codingnepalweb.com/">Block the site</a>
+               <a href="">See it anyway</a>
+               <a href="">Block the site</a>
             </div>
          </div>
       </div>
