--- a/pop-up/pop-up.html
+++ b/pop-up/pop-up.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>404 Error Page | CodingNepal</title>
+      <title>Phising Website Detected</title>
       <link rel="stylesheet" href="style.css">
    </head>
    <body>
